# Solving-mazes

./: .gitignore  README.md  a_star.py  dfs.py  h_learn.py  hh_learn_test.py  learned_heuristic.pth  learned_heuristic_log.txt  learned_heuristic_middle.pth  main.py  makefile  maze.py  olbrzym.pth  pyproject.toml  qlearned.pkl  qlearning.py  requirements.txt  sprawozdanie_testing.txt  test_learned.py  test_maze.pkl
100x100/: matrix.pkl  model.pkl
10x10/: matrix.pkl  model.pkl
111x111/: matrix.pkl  model.pkl
11x11/: matrix.pkl  model.pkl
200x200/: matrix.pkl
222x222/: matrix.pkl
321x321/: matrix.pkl
500x500/: matrix.pkl
555x555/: matrix.pkl
algorithms/: qlearning.py
docs/: .gitignore  docs.aux  docs.out  docs.tex
logs/: learned_heuristic_log.txt
models/: heuristic_model.py  test_learned.py
saved_models_archive/: learned_heuristic_middle_euclidean_astar.pth
utils/: maze.py  plot_log.py
